--- a/Education.html
+++ b/Education.html
@@ -50,7 +50,7 @@
                         <li class="list"> <span>SPECIALIZATION BUSINESS MANAGEMENT:</span> Universidad Nacional de
                             Colombia - 2013
                         </li class="list">
-                        <li class="list"> <span>ADMINISTRATIVE ENGINEERING:</span> Escuela de Ingeniería de
+                        <li class="list"> <span>MANAGEMENT ENGINEERING:</span> Escuela de Ingeniería de
                             Antioquia - 2011
                         </li>
                     </ul>
